// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-0 {
  font-size: 16px;
  line-height: 24px;
  padding: 0.05px 0;
}

.emotion-0::before {
  content: '';
  margin-top: -0.4187em;
  display: block;
  height: 0;
}

.emotion-0::after {
  content: '';
  margin-bottom: -0.3796em;
  display: block;
  height: 0;
}

.emotion-0:not(:last-child) {
  margin-bottom: 12.671875px;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Paragraph"
>
  Hello world
</div>
`;

exports[`composition hook should return with Paragraph props 1`] = `
Object {
  "className": "css-p2kbam css-63it0p css-1qnz8fc bb-Box bb-Paragraph",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-0 {
  font-size: 16px;
  line-height: 24px;
  padding: 0.05px 0;
}

.emotion-0::before {
  content: '';
  margin-top: -0.4187em;
  display: block;
  height: 0;
}

.emotion-0::after {
  content: '';
  margin-bottom: -0.3796em;
  display: block;
  height: 0;
}

.emotion-0:not(:last-child) {
  margin-bottom: 12.671875px;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Paragraph"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0 {
  font-size: 16px;
  line-height: 24px;
  padding: 0.05px 0;
}

.emotion-0::before {
  content: '';
  margin-top: -0.4187em;
  display: block;
  height: 0;
}

.emotion-0::after {
  content: '';
  margin-bottom: -0.3796em;
  display: block;
  height: 0;
}

.emotion-0:not(:last-child) {
  margin-bottom: 12.671875px;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<p
  class="emotion-0 emotion-1 emotion-2 test bb-Box bb-Paragraph"
>
  hello world
</p>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  font-size: 16px;
  line-height: 24px;
  padding: 0.05px 0;
}

.emotion-0::before {
  content: '';
  margin-top: -0.4187em;
  display: block;
  height: 0;
}

.emotion-0::after {
  content: '';
  margin-bottom: -0.3796em;
  display: block;
  height: 0;
}

.emotion-0:not(:last-child) {
  margin-bottom: 12.671875px;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<p
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Paragraph"
>
  Hello world
</p>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0 {
  font-size: 16px;
  line-height: 24px;
  padding: 0.05px 0;
}

.emotion-0::before {
  content: '';
  margin-top: -0.4187em;
  display: block;
  height: 0;
}

.emotion-0::after {
  content: '';
  margin-bottom: -0.3796em;
  display: block;
  height: 0;
}

.emotion-0:not(:last-child) {
  margin-bottom: 12.671875px;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  color: var(--bb-palette-primary, #000000)!important;
}

<p
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Paragraph"
>
  Hello world
</p>
`;

exports[`theming Paragraph.base should render correctly 1`] = `
.emotion-0 {
  font-size: 16px;
  line-height: 24px;
  padding: 0.05px 0;
}

.emotion-0::before {
  content: '';
  margin-top: -0.4187em;
  display: block;
  height: 0;
}

.emotion-0::after {
  content: '';
  margin-bottom: -0.3796em;
  display: block;
  height: 0;
}

.emotion-0:not(:last-child) {
  margin-bottom: 12.671875px;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<p
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Paragraph"
>
  hello world
</p>
`;
